--- a/src/cbor/configuration.h.in
+++ b/src/cbor/configuration.h.in
@@ -9,5 +9,7 @@
 #define CBOR_BUFFER_GROWTH ${CBOR_BUFFER_GROWTH}
 #cmakedefine01 CBOR_PRETTY_PRINTER
 
+#define CBOR_RESTRICT_SPECIFIER ${CBOR_RESTRICT_SPECIFIER}
+#define CBOR_INLINE_SPECIFIER ${CBOR_INLINE_SPECIFIER}
 
 #endif //LIBCBOR_CONFIGURATION_H
