--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,4 @@ build_script:
 - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
 - cmake --build build --config "%CONFIGURATION%"
 
-after_build:
-- cmake --build build --config "%CONFIGURATION%" --target check
-- cmake --build build --config "%CONFIGURATION%" --target package
+# TODO enable CMocka tests, maybe package the binaries
