--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,14 @@ matrix:
         - cmake-data
     env: CC="gcc-6" CXX="g++-6"
   - env: ARCH=arm
+    addons:
+      apt:
+        sources:
+        - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
+        packages:
+        - gcc-arm-linux-gnueabihf
+        - cmake
+        - cmake-data
 
 
 
