Only build .debs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if(PACKAGE)
             OUTPUT_STRIP_TRAILING_WHITESPACE
     )
 
-    set(CPACK_GENERATOR "DEB" "TGZ" "RPM")
+    set(CPACK_GENERATOR "DEB")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${CMAKE_DEB_HOST_ARCH})
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Pavel Kalvoda")
     set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
