--- a/doc/source/requirements.txt
+++ b/doc/source/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/michaeljones/breathe@master#egg=breathe
+-e git+https://github.com/michaeljones/breathe@master#egg=breathe
 Sphinx==1.6.3
 sphinx-autobuild==0.6.0
 sphinx-rtd-theme==0.1.9
