--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,10 @@ script:
   - ./clang-format.sh
   - git diff-index --quiet HEAD
   - mkdir build && cd build
-  - cmake -DWITH_TESTS=ON \
-          -DCBOR_CUSTOM_ALLOC=ON \
-          -DCMAKE_BUILD_TYPE=Debug \
-          -DSANITIZE=OFF \
+  - cmake -DWITH_TESTS=ON
+          -DCBOR_CUSTOM_ALLOC=ON
+          -DCMAKE_BUILD_TYPE=Debug
+          -DSANITIZE=OFF
           ..
   - make VERBOSE=1
   - ctest -VV
