--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
       sudo: required
       compiler: gcc
       env: TRAVIS_ARCH="arm64"
+    # TODO: Add OSX support (might require some brew tweaking)
 
 before_install:
   - git clone git://git.cryptomilk.org/projects/cmocka.git
@@ -29,8 +30,6 @@ before_install:
   - cmake .. && make -j2 && sudo make install
   - cd ../..
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; sudo apt-get install -y clang-format-8 swig; fi
-  - clang-format -version
-  - clang-format-8 -version
 
 script:
   - cppcheck . --error-exitcode=1 --force
