--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - cd cmocka && mkdir build && cd build
   - cmake .. && make -j2 && sudo make install
   - cd ../..
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; sudo apt-get install -y clang-format-8 swig; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; sudo apt-get install -y clang-format-8 cppcheck swig; fi
 
 script:
   - cppcheck . --error-exitcode=1 --force
