Fix and update Travis CI (#116)
* Remove out of date cppcheck suppressions; fix hook for deleted files

* Stop using suppressions

* Try adding custom findcmocka

* Vain attempt to debug deps bs

* Vain attempt to debug deps bs #2

* Deps BS: Try stealing a simpler travis setup

* Deps BS: Add find module (facepalm)

* GCC: Update sanitizer specs

* CI: Add arm64 target

* CI: Migrate rest of script

* CI: Debug clang formaat

* CI: Try different multine strings

* CI: Explicitly install clangf8

* CI: Explicitly install clangf8

* CI: More clf8 tweaks

* CI: Install cppcheck

* CI: Fix YAML syntax

* CI: Get rid of the qemu hack

* CI: Build cmocka in a separte dir to avoid confusing cppcheck

* CI: Fix format hook to find the right files

* CI: Make format hook chatty in CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(libcbor)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
 include(CTest)
 
 SET(CBOR_VERSION_MAJOR "0")
@@ -72,8 +73,8 @@ else()
 
     if(SANITIZE)
         set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} \
-            -fsanitize-trap=undefined -fsanitize=address \
-            -fsanitize-trap=bounds -fsanitize=alignment")
+            -fsanitize=undefined -fsanitize=address \
+            -fsanitize=bounds -fsanitize=alignment")
     endif()
 endif()
 
