CI: Try OSX setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,10 @@ matrix:
       sudo: required
       compiler: gcc
       env: TRAVIS_ARCH="arm64"
-    # TODO: Add OSX support (might require some brew tweaking)
+    - arch: amd64
+      os: osx
+      compiler: gcc
+      env: TRAVIS_ARCH="amd64"
 
 before_install:
   - pushd ${HOME}
@@ -33,10 +36,13 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; sudo apt-get install -y clang-format-8 cppcheck; fi
 
 script:
-  - cppcheck . --error-exitcode=1 --force
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; cppcheck . --error-exitcode=1 --force; fi
   # Fail if re-formatting creates diffs (implying bad formatting)
-  - ./clang-format.sh --verbose
-  - git diff-index --quiet HEAD
+  - >
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      /clang-format.sh --verbose
+      git diff-index --quiet HEAD
+    fi;
   - mkdir build && cd build
   - cmake -DWITH_TESTS=ON
           -DCBOR_CUSTOM_ALLOC=ON
