--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,10 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; sudo apt-get install -y clang-format-8 cppcheck; fi
 
 script:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; cppcheck . --error-exitcode=1 --force; fi
-  # Fail if re-formatting creates diffs (implying bad formatting)
   - >
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      cppcheck . --error-exitcode=1
+      # Fail if re-formatting creates diffs (implying bad formatting)
       /clang-format.sh --verbose
       git diff-index --quiet HEAD
     fi;
