add CBOR_STACK_MAX_SIZE configuration flag

--- a/src/cbor/configuration.h.in
+++ b/src/cbor/configuration.h.in
@@ -12,4 +12,6 @@
 #define CBOR_RESTRICT_SPECIFIER ${CBOR_RESTRICT_SPECIFIER}
 #define CBOR_INLINE_SPECIFIER ${CBOR_INLINE_SPECIFIER}
 
+#cmakedefine01 CBOR_STACK_MAX_SIZE
+
 #endif //LIBCBOR_CONFIGURATION_H
