stop building with LTO for Release builds
This commit prepares the project for using CMake's LTO support.

(Using `-flto` made sense in 2015, since CMake support for LTO with GCC
and Clang was added in version 3.9.0 in 2017. [1])

Specifying `-flto` seems to cause build failures on Ubuntu xenial. [2]

[1]: https://cmake.org/cmake/help/v3.9/release/3.9.html
[2]: PJK/libcbor#140

Fixes: 8e757839c39743b69cb1a1bab73f5cc1a7051a88

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ else()
     set(CBOR_RESTRICT_SPECIFIER "restrict")
 
     set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall -g -ggdb -DDEBUG=true")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -flto -Wall -DNDEBUG")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -Wall -DNDEBUG")
 
     if(SANITIZE)
         set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} \
@@ -80,7 +80,6 @@ else()
 endif()
 
 set(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g")
-set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-flto")
 
 
 include(CheckTypeSize)
