Add a bazel-built example.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ venv
 **.DS_Store
 .vscode
 requirements.txt
+examples/bazel/bazel-bazel
+examples/bazel/bazel-bin
+examples/bazel/bazel-out
+examples/bazel/bazel-testlogs
