--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2.1
 
 jobs:
   build-and-test:
-    docker:
-      - image: "ubuntu-2004:202101-01"
+    machine:
+      image: ubuntu-2004:202010-01
     steps:
       - checkout
       - run: apt-get update
