--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,18 @@
 version: 2.1
 
+linux-setup: &linux-setup >
+  sudo apt-get update
+  sudo apt-get install -y gcc clang g++ cmake clang-format-8 cppcheck valgrind
+  sudo apt install libcmocka-dev
 
-linux-setup: &linux-setup
-  - run: sudo apt-get update
-  - run: sudo apt-get install -y gcc clang g++ cmake clang-format-8 cppcheck valgrind
-  - run: sudo apt install libcmocka-dev
-
-build-test: &build-test
-  - run: >
-      cmake -DWITH_TESTS=ON \
-          -DCBOR_CUSTOM_ALLOC=ON \
-          -DCMAKE_BUILD_TYPE=Debug \
-          -DSANITIZE=OFF \
-          .
-  - run: make VERBOSE=1
-  - run: ctest -VV
+build-test: &build-test >
+  cmake -DWITH_TESTS=ON \
+      -DCBOR_CUSTOM_ALLOC=ON \
+      -DCMAKE_BUILD_TYPE=Debug \
+      -DSANITIZE=OFF \
+      .
+  make VERBOSE=1
+  ctest -VV
 
 jobs:
   static-test:
@@ -30,8 +28,8 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
-      <<: *linux-setup
-      <<: *build-test
+      - run: *linux-setup
+      - run: *build-test
         # TODO: Reenable, currently fails on libjson leak (package out of date)
         # The issue actually seems to be in the instrumentation code, not
         # libcbor (we don't use libjsoncpp)
@@ -50,11 +48,11 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
-      <<: *linux-setup
+      - run: *linux-setup
       - run: >
           export CC=/usr/bin/clang
           export CXX=/usr/bin/clang++
-      <<: *build-test
+      - run: *build-test
 
 
 
