--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 linux-setup: &linux-setup >
-  sudo apt-get update
-  sudo apt-get install -y gcc clang g++ cmake clang-format-8 cppcheck valgrind
+  sudo apt-get update &&
+  sudo apt-get install -y gcc clang g++ cmake clang-format-8 cppcheck valgrind &&
   sudo apt install libcmocka-dev
 
 build-test: &build-test >
@@ -10,8 +10,8 @@ build-test: &build-test >
       -DCBOR_CUSTOM_ALLOC=ON \
       -DCMAKE_BUILD_TYPE=Debug \
       -DSANITIZE=OFF \
-      .
-  make VERBOSE=1
+      . &&
+  make VERBOSE=1 &&
   ctest -VV
 
 jobs:
