Only run OSX CI on master and when linux job succeeded

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,4 +106,10 @@ workflows:
       - build-and-test-clang
       - build-and-test-arm
       - build-and-test-osx
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only:
+                - master
       - build-bazel
