Fix Yaml syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ workflows:
       - build-and-test
       - build-and-test-clang
       - build-and-test-arm
-      - build-and-test-osx
+      - build-and-test-osx:
           requires:
             - build-and-test
           filters:
