--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,5 @@
 ignore:
-  - "test/stream_expectations.c"  # Function pointers are not resolved correctly
+  - "test/**/*"
   - "examples"
 coverage:
   status:
