--- a/.github/workflows/fuzz-pr.yml
+++ b/.github/workflows/fuzz-pr.yml
@@ -1,7 +1,7 @@
-name: CIFuzz
-on:
-  schedule:
-    - cron:  '0 4 * * *'
+# A quick CIFuzz sanity check. Fuzzing time is kept low provide fast feedback
+# on PRs; fuzz.yml schedules a daily long-running fuzzing job.
+name: CIFuzz PR check
+on: [pull_request]
 jobs:
   Fuzzing:
     runs-on: ubuntu-latest
@@ -11,11 +11,11 @@ jobs:
       with:
         oss-fuzz-project-name: 'libcbor'
         dry-run: false
-    - name: Run Fuzzers
+    - name: Smoke Test Fuzzers
       uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
       with:
         oss-fuzz-project-name: 'libcbor'
-        fuzz-seconds: 21600 # 6 hours
+        fuzz-seconds: 10
         dry-run: false
     - name: Upload Crash
       uses: actions/upload-artifact@v1
