--- a/doc/source/requirements.txt
+++ b/doc/source/requirements.txt
@@ -3,29 +3,19 @@ Babel==2.9.1
 breathe==4.33.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.0.3
 colorama==0.4.4
-Cython==0.29.27
-distlib==0.3.4
 docutils==0.17.1
-expense-parser==0.0.1
-filelock==3.6.0
 idna==3.3
 imagesize==1.3.0
 importlib-metadata==4.11.3
 Jinja2==3.0.3
-livereload @ https://github.com/lepture/python-livereload/archive/master.zip
+livereload==2.6.3
 MarkupSafe==2.1.1
-numpy==1.22.2
 packaging==21.3
-pandas==1.4.0
-platformdirs==2.5.1
 Pygments==2.11.2
 pyparsing==3.0.7
-python-dateutil==2.8.2
 pytz==2021.3
 requests==2.27.1
-six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==4.4.0
 sphinx-autobuild==2021.3.14
@@ -38,5 +28,4 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 tornado==6.1
 urllib3==1.26.9
-virtualenv==20.13.4
 zipp==3.7.0
